display you won game after last letter is revealed

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                             Press Any Letter to Start the Game <br> <br>
                             Guess Name of the Movie <br> <br>
                             <p>Movie Name:</p><p id="rightWord"></p>
+                            <p id="youAreRight"></p>
                             <p>Tries Left:</p><p id="triesLeft">12</p>
                             <p>Guessed Letters:</p><p id="guessLetters"> </p>
                             <p>Wins:</p><p id="wins"> </p>
