added hover effects on content too

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             MOVIEEEEEEEES
                     </div>
                     <div class="col-3" id="picframe">
-
+                     <br> Most Famous Movie Studios
                    </div>
                     <div class="col-0" id="between">
                             34
